# runtheta

./: CLAUDE.md  CODE_STANDARDS.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
controller/theta-node-labeler/: Dockerfile  go.mod  main.go
deploy/: cal_poly_ai_factory_runbook.md  theta-monitor.service
docs/: CONFORMANCE.md
rig/: README.md  __init__.py  analyze.py  calibrate_from_runs.py  colab_capture.py  serial_logger.py  throttle.py
rig/firmware/: pico_ambient.py
rig/tests/: test_rig.py
sim/elt/: calibrate_dctm.py  cv_evaluation.py  dctm.py  multivariate_detector.py  scenario_generator.py  tim_degradation.py
tests/: sim_ai_factory.py  test_activeprobe.py  test_certificate.py  test_characterize.py  test_collector_lost_gpu.py  test_coolant_tref.py  test_demo.py  test_economics.py  test_fleet_scan.py  test_fleetreport.py  test_h100_reference.py  test_hal_strict.py  test_jobreport.py  test_knowledge.py  test_leadtime_instruments.py  test_mcp_server.py  test_monitor_demo.py  test_nodesync.py  test_operator.py  test_peer.py  test_prognostic.py  test_recordstore.py  test_recurrence_hazard.py  test_rocm_collector.py  test_rtheta_curve.py  test_signature.py  test_silicon.py  test_tui.py
theta/: __init__.py  cli.py  mcp_server.py  tui.py  tuifx.py  wizard.py
theta/agent/: AGENTIC_PATTERNS.md  activeprobe.py  alerter.py  baseline.py  calibrate.py  calibration.py  certificate.py  characterize.py  classifier.py  collector.py  correlator.py  daemon.py  dcgm_collector.py  demo.py  detector.py  discovery.py  economics.py  exporter.py  fault_classifier.py  fleetreport.py  governor.py  h100_reference.py  hal.py  health.py  hw_profiles.py  jobreport.py  knowledge.py  metrics.py  nodesync.py  operator.py  otlp_exporter.py  partner_report.py  peer.py  predictor.py  predictor_cnn.py  prognostic.py  recordstore.py  redfish_collector.py  rtheta_curve.py  (+11 more)
(+12 files in other folders)
