[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runtheta"
version = "0.1.13"
description = "GPU thermal-power forensics agent. Computes R_theta = ΔT/P in real time."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "nvidia-ml-py>=12.0.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.0",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "structlog>=24.0",
    "joblib>=1.3",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
otlp = ["opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp-proto-http>=1.20"]
agent = ["anthropic>=0.40"]
ui = ["textual>=0.80"]

[project.scripts]
theta = "theta.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["theta"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, N naming, B bugbear, SIM simplify,
# NPY numpy-specific, I import order. Documented deviations:
#   E501  — long lines carry inline physics/method rationale; not worth churn
#   N806  — uppercase locals are deliberate physics notation (R_theta, T_ref, P)
#   SIM105 — explicit try/except in NVML fault paths reads clearer than
#            contextlib.suppress and avoids an import in hot loops
select = ["E", "W", "F", "N", "B", "SIM", "NPY", "I"]
ignore = ["E501", "N806", "SIM105"]

[tool.hatch.build.targets.sdist]
# Public artifact hygiene: internal analysis scripts and backend config never
# ship. tools/ + research/ reference private raw exports; supabase/ is the
# opt-in telemetry backend's own deployment, not part of the agent.
exclude = ["tools/", "research/", "supabase/", "REPO_PUBLIC_CHECKLIST.md"]
